test/libsolidity/syntaxTests/imports/name_clash_in_import_struct_contract_2.sol
==== Source: a ====
struct A { uint256 a; }
==== Source: b ====
import "a" as A;
contract A {}
// ----
// DeclarationError: (b:17-30): Identifier already declared.
